docs: update openapi docs
