# app/controllers/shared.js
@@ -21,6 +21,8 @@ module.exports = function (app) {
    *        - collection
    *      parameters:
    *        - $ref: '#/parameters/collectionId'
+   *        - $ref: '#/parameters/page'
+   *        - $ref: '#/parameters/pageSize'
    *      produces:
    *        - application/json
    *      responses:
